[package]
authors = ["Raphael Nestler <raphael.nestler@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "rfid-audio"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.1"
cortex-m-semihosting = "0.3.3"
cortex-m-rtic = "0.5.3"
embedded-mp3 = { version = "0.1.0", git = "https://github.com/ceigel/embedded-mp3-rust.git" }
panic-itm = "0.4.1"
log = {"version"="0.4.8", features=["max_level_trace", "release_max_level_warn"]}
cortex-m-log = {"version"="0.6.1", features=["itm", "log-integration"]}
mfrc522 = "0.2.0"

[dependencies.stm32l4xx-hal]
features = ["stm32l4x1", "rt"]
version = "0.6.0"
git = "https://github.com/stm32-rs/stm32l4xx-hal.git"

[dependencies.embedded-sdmmc]
version = "0.3.0"
git = "https://github.com/rust-embedded-community/embedded-sdmmc-rs.git"
branch = "develop"

[dependencies.cast]
default-features = false
version = "0.2"

# this lets you use `cargo fix`!
[[bin]]
name = "rfid-audio"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = 3

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level="z"
debug = true # symbols are nice and they don't increase the size on Flash
